--- a/eTools Ultimate/Views/Pages/ItemsPage.xaml
+++ b/eTools Ultimate/Views/Pages/ItemsPage.xaml
@@ -20,6 +20,9 @@
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+    Loaded="Page_Loaded"
+    MouseMove="Page_MouseMove"
+    MouseRightButtonUp="Page_MouseRightButtonUp"
     ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
@@ -3239,6 +3242,237 @@
             </StackPanel>
         </DataTemplate>
 
+        <!--  Model warning  -->
+        <DataTemplate x:Key="ModelWarningTemplate">
+            <Border
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="{DynamicResource LayerFillColorDefaultBrush}"
+                Opacity="0.95">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <ui:SymbolIcon
+                        Margin="0,0,0,10"
+                        FontSize="48"
+                        Foreground="{DynamicResource SystemFillColorCautionBrush}"
+                        Symbol="Warning24" />
+                    <TextBlock
+                        Margin="0,0,0,10"
+                        HorizontalAlignment="Center"
+                        FontSize="16"
+                        FontWeight="SemiBold"
+                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                        Text="{i18n:StringLocalizer 'No Model Available'}" />
+                    <TextBlock
+                        MaxWidth="250"
+                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                        Text="{Binding Path=ModelViewerError, Mode=OneWay}"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap" />
+                </StackPanel>
+            </Border>
+        </DataTemplate>
+
+        <!--  DataTemplate: Model  -->
+        <DataTemplate x:Key="ModelSectionTemplate">
+            <StackPanel>
+                <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'Model'}" />
+
+                <!--  Preview and Motions Container  -->
+                <Grid Margin="0,0,0,15">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <!--  3D Model Preview  -->
+                    <Grid Grid.Column="0" Margin="0,0,10,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="250" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Border
+                            Grid.Row="0"
+                            Background="{DynamicResource ControlFillColorDefaultBrush}"
+                            BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                            BorderThickness="1"
+                            CornerRadius="4">
+                            <Grid>
+                                <Image
+                                    x:Name="ModelViewerImage"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    MouseRightButtonDown="ModelViewerImage_MouseRightButtonDown"
+                                    MouseWheel="ModelViewerImage_MouseWheel"
+                                    Source="{Binding ViewModel.D3DHost, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                    Stretch="UniformToFill" />
+                                <Border
+                                    HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Stretch"
+                                    Background="{DynamicResource LayerFillColorDefaultBrush}"
+                                    Opacity="0.95">
+                                    <Border.Style>
+                                        <Style TargetType="Border">
+                                            <Setter Property="Visibility" Value="Visible" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding ViewModel.D3DHost.Error, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}" Value="{x:Null}">
+                                                    <Setter Property="Visibility" Value="Collapsed" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Border.Style>
+                                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                                        <ui:SymbolIcon
+                                            Margin="0,0,0,10"
+                                            FontSize="48"
+                                            Foreground="{DynamicResource SystemFillColorCautionBrush}"
+                                            Symbol="Warning24" />
+                                        <TextBlock
+                                            Margin="0,0,0,10"
+                                            HorizontalAlignment="Center"
+                                            FontSize="16"
+                                            FontWeight="SemiBold"
+                                            Foreground="{DynamicResource TextFillColorPrimaryBrush}"
+                                            Text="{i18n:StringLocalizer 'No Model Available'}" />
+                                        <TextBlock
+                                            MaxWidth="250"
+                                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                            Text="{Binding ViewModel.D3DHost.Error, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                            TextAlignment="Center"
+                                            TextWrapping="Wrap" />
+                                    </StackPanel>
+                                </Border>
+                                <StackPanel
+                                    Margin="0,5,5,0"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Top"
+                                    Panel.ZIndex="1"
+                                    Orientation="Horizontal">
+                                    <ui:Button Command="{Binding ShowReferenceModelContentDialogCommand}" ToolTip="{i18n:StringLocalizer 'Reference Model'}">
+                                        <ui:SymbolIcon Symbol="ImageReflection24" />
+                                    </ui:Button>
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                    <!--  Model Settings  -->
+                    <StackPanel Grid.Column="1" Margin="10,0,0,0">
+                        <!--  First Row  -->
+                        <UniformGrid Columns="2">
+                            <!--  File  -->
+                            <Grid Style="{StaticResource FormFieldStyle}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'File'}" />
+                                    <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                        <ui:SymbolIcon.ToolTip>
+                                            <ToolTip Content="{i18n:StringLocalizer 'Model file path'}" />
+                                        </ui:SymbolIcon.ToolTip>
+                                    </ui:SymbolIcon>
+                                </StackPanel>
+                                <Grid Grid.Row="1">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <ui:AutoSuggestBox
+                                        Grid.Column="0"
+                                        OriginalItemsSource="{Binding ViewModel.ModelFilePossibilities, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                        Text="{Binding Model.SzName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                    <ui:Button
+                                        Grid.Column="1"
+                                        Width="30"
+                                        Height="32"
+                                        Margin="5,0,0,0"
+                                        Command="{Binding DataContext.SelectModelFileCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                        Content="{i18n:StringLocalizer '...'}" />
+                                </Grid>
+                            </Grid>
+
+                            <!--  Scale  -->
+                            <Grid Style="{StaticResource FormFieldStyle}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="32" />
+                                </Grid.RowDefinitions>
+                                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Scale'}" />
+                                    <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                        <ui:SymbolIcon.ToolTip>
+                                            <ToolTip Content="{i18n:StringLocalizer 'Model scale factor'}" />
+                                        </ui:SymbolIcon.ToolTip>
+                                    </ui:SymbolIcon>
+                                </StackPanel>
+                                <ui:NumberBox
+                                    Grid.Row="1"
+                                    SpinButtonPlacementMode="Inline"
+                                    Value="{Binding Model.FScale, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+
+                            <!--  Male part  -->
+                            <Grid Style="{StaticResource FormFieldStyle}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Male part'}" />
+                                    <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                        <ui:SymbolIcon.ToolTip>
+                                            <ToolTip Content="{i18n:StringLocalizer 'Model scale factor'}" />
+                                        </ui:SymbolIcon.ToolTip>
+                                    </ui:SymbolIcon>
+                                </StackPanel>
+                                <TextBox Grid.Row="1" Text="{Binding Model.MalePart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+
+                            <!--  Female part  -->
+                            <Grid Style="{StaticResource FormFieldStyle}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Female part'}" />
+                                    <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                        <ui:SymbolIcon.ToolTip>
+                                            <ToolTip Content="{i18n:StringLocalizer 'Model scale factor'}" />
+                                        </ui:SymbolIcon.ToolTip>
+                                    </ui:SymbolIcon>
+                                </StackPanel>
+                                <TextBox Grid.Row="1" Text="{Binding Model.FemalePart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                        </UniformGrid>
+
+                        <!--  Second Row  -->
+                        <UniformGrid Columns="2">
+                            <!--  Texture  -->
+                            <Grid Style="{StaticResource FormFieldStyle}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                    <TextBlock Style="{StaticResource FieldLabelStyle}" Text="{i18n:StringLocalizer 'Texture'}" />
+                                    <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                                        <ui:SymbolIcon.ToolTip>
+                                            <ToolTip Content="{i18n:StringLocalizer 'Texture'}" />
+                                        </ui:SymbolIcon.ToolTip>
+                                    </ui:SymbolIcon>
+                                </StackPanel>
+                                <ComboBox
+                                    Grid.Row="1"
+                                    ItemsSource="{Binding ViewModel.ModelTexturePossibilities, Mode=OneWay, RelativeSource={RelativeSource AncestorType=Page}}"
+                                    SelectedValue="{Binding Model.NTextureEx, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            </Grid>
+                        </UniformGrid>
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
+        </DataTemplate>
+
         <!--  DataTemplate for ListView Items  -->
         <DataTemplate x:Key="ItemListTemplate">
             <Grid Margin="4">
@@ -4054,6 +4288,7 @@
                                 </Style>
                             </ContentControl.Style>
                         </ContentControl>
+                        <ContentControl Content="{Binding ItemsView}" ContentTemplate="{StaticResource ModelSectionTemplate}" />
                     </StackPanel>
                 </Grid>
             </ScrollViewer>
